clean up site.conf

--- a/site/site.conf
+++ b/site/site.conf
@@ -1,9 +1,14 @@
 (
+
+;; port number to bind the web server to.
 :port 8080
+
+;; register the list of routes to expose.
 :routes (
-        :page-css             "^/css/site.css$"
-        :page-character-list  "^/characters$"
-        :page-character-new   "^/characters/new$"
-        :page-character-add   "^/characters/add$"
+        :page-css             "/css/site.css"
+        :page-character-list  "/characters"
+        :page-character-new   "/characters/new"
+        :page-character-add   "/characters/add"
         )
+
 )
