moved page generators to documents file; minor fixes.

--- a/site/site.conf
+++ b/site/site.conf
@@ -5,10 +5,10 @@
 
 ;; register the list of routes to expose.
 :routes (
-        :page-css             "/css/site.css"
-        :page-character-list  "/characters"
-        :page-character-new   "/characters/new"
-        :page-character-add   "/characters/add"
+        :style-site             "/css/site.css"
+        :page-character-list    "/characters"
+        :page-character-new     "/characters/new"
+        :page-character-add     "/characters/add"
         )
 
 )
