mount site modules instead of defining every route in site.conf; TODO: fix template link uri's

--- a/site/site.conf
+++ b/site/site.conf
@@ -1,14 +1,16 @@
 (
 
-;; port number to bind the web server to.
+; port number to bind the web server to.
 :port 8080
 
-;; register the list of routes to expose.
+; load the site modules.
+:modules (
+  :module-characters "/charz"
+  )
+
+; register the list of routes to expose.
 :routes (
-        :style-site             "/css/site.css"
-        :page-character-list    "/characters"
-        :page-character-new     "/characters/new"
-        :page-character-add     "/characters/add"
-        )
+  :style-site "/css/site.css"
+  )
 
 )
