--- a/site/site.conf
+++ b/site/site.conf
@@ -5,7 +5,7 @@
 
 ; load the site modules.
 :modules (
-  :module-characters "/charz"
+  :module-characters "/characters"
   )
 
 ; register the list of routes to expose.
